updated readme and javadocs